--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,8 @@
             margin: 0 auto;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: flex-start;
+            gap: 2rem;
         }
         .site-logo {
             font-size: 1.2rem;
@@ -120,7 +121,7 @@
         <nav class="site-nav">
             <a href="/" class="site-logo">Huichao</a>
             <div class="nav-links">
-                <!-- Future navigation links can go here -->
+                <a href="/trails/">Trails</a>
             </div>
         </nav>
     </header>
