--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,6 +122,7 @@
             <a href="/" class="site-logo">Huichao</a>
             <div class="nav-links">
                 <a href="/trails/">Trails</a>
+                <a href="/james-drawings/">James drawings</a>
             </div>
         </nav>
     </header>
